Changelog
=========

0.7.3dev - unreleased
---------------------


0.7.2 - 2011-02-17
------------------

* Make sure the CRUD add form doesn't use a standalone template.
  [davisagli]

0.7.1 - 2011-01-18
---------------------

* Add zope.app.testing to test dependencies so that it continues to work under
  Zope 2.13.
  [esteele]

0.7.0 - 2010-08-04
------------------

* Add a marker interface which can be used by widgets to defer any security
  checks they may be doing when they are set up during traversal with the
  ++widgets++ namespace
  [dukebody]

* Fix re-ordering of fields not in the default fieldset. Thanks to Thomas
  Buchberger for the patch.
  [optilude]

* Added Norwegian translation.
  [regebro]

0.6.0 - 2010-04-20
------------------

* In the CRUD table, fix odd/even labels, which were reversed.
  [limi]

* Added slots to the ``titlelessform`` macro. See ``README.txt`` for details.
  [optilude, davisagli]

* Remove the distinction between wrapped and unwrapped subforms. A subform is
  always wrapped by the form that contains it, and can use a Zope 3 page
  template.
  [davisagli]

* Fixed tests in Plone 3.
  [davisagli]

* Fixed tests in Plone 4
  [optilude]

* Made it possible to distinguish wrapped and unwrapped forms via the 
  IWrappedForm marker interface.
  [optilude]

* Made it possible to use z3c.form forms without a FormWrapper in Plone 4.
  [optilude]

0.5.10 - 2010-02-01
-------------------

* A z3c.form.form.AddForm do a redirect in its render method.
  So we have to render the form to see if we have a redirection.
  In the case of redirection, we don't render the layout at all.
  This version remove the contents method on FormWrapper,
  it's now an attribute set during the FormWrapper.update.
  This change fixes status message not shown because it was consumed by
  the never shown rendered form.
  [vincentfretin]

0.5.9 - 2010-01-08
------------------

* Fix security problem with the ++widget++ namespace
  [optilude]

0.5.8 - 2009-11-24