@@ -4,6 +4,8 @@ Changelog
 0.7.3dev - unreleased
 ---------------------
 
+* Handle wrong fieldnames more cleanly in the ++widget++ traverser.
+  [elro]
 
 0.7.2 - 2011-02-17
 ------------------
